--- a/projeto.html
+++ b/projeto.html
@@ -8,20 +8,19 @@
 
 <body>
     <h1>Primeiro Site</h1>
-
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Temporibus neque quibusdam impedit et sed iure sit dolorum?
-        Deleniti dignissimos quam distinctio vel, nostrum saepe maxime
-        vitae molestias iusto alias quo?
-    </p>
-
-    <hr>
-
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Temporibus neque quibusdam impedit et sed iure sit dolorum?
-        Deleniti dignissimos quam distinctio vel, nostrum saepe maxime
-        vitae molestias iusto alias quo?
-    </p>
+    <!--  Lista não ordenada => circle, square, list, disc-->
+    <ul type="circle">
+        <h2> Lista Não Ordenada</h2>
+        <li> Notebook</li>
+        <li> Roteador</li>
+    </ul>
+    <!--  Lista  ordenada => 1, A, a, I, i-->
+    <ol type="1">
+        <h2> Lista ordenada </h2>
+        <li> Stranger Things</li>
+        <li> Suits</li>
+        <li> Arrow</li>
+    </ol>
 
 </body>
 
